# PnP

./: CMakeLists.txt  README.md
ArmorDetector/: CMakeLists.txt  main.cpp
ArmorDetector/include/: PnPslover.h  detect.h
ArmorDetector/src/: PnPslover.cpp  findArmor.cpp  findLightBar.cpp  imageDispose.cpp  matchingArmor.cpp  matchingLightBar.cpp
HikDriver/: CMakeLists.txt
HikDriver/hik_driver/lib/32/: libMVGigEVisionSDK.so.4.4.1.2  libMvCameraControlWrapper.so.4.4.1.2  libMvUsb3vTL.so.4.4.1.2
